--- a/public/css/base.css
+++ b/public/css/base.css
@@ -52,3 +52,13 @@ a,hr{padding:0}a,button,input[type=button],input[type=file],input[type=submit],l
   text-align:  center;
   height:  200px;
 }
+
+#activeAction {
+  font-size:  45px;
+  height:  50px;
+}
+
+#buttons {
+  margin-top:  10px;
+  margin-bottom:  20px;
+}
